WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276527
[JSC] Fix ASSERT(canSafelyBeUsed()) failure in Waiter's WeakPtr<TicketData>::get() with ThreadSafeWeakPtr
https://bugs.webkit.org/show_bug.cgi?id=276527
Summary
[JSC] Fix ASSERT(canSafelyBeUsed()) failure in Waiter's WeakPtr<TicketData>::...
Yijia Huang
Reported
2024-07-11 21:50:00 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-07-11 21:50:38 PDT
<
rdar://problem/131590927
>
Yijia Huang
Comment 2
2024-07-11 22:23:33 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30739
EWS
Comment 3
2024-07-12 09:14:02 PDT
Committed
280909@main
(36e90619cf8a): <
https://commits.webkit.org/280909@main
> Reviewed commits have been landed. Closing PR #30739 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug