Source/JavaScriptCore/runtime/JSGlobalObject.h
@@ -511,7 +511,7 @@ public:
 
     void addWeakTicket(DeferredWorkTimer::Ticket);
     void clearWeakTickets();
-    std::unique_ptr<WeakHashSet<DeferredWorkTimer::TicketData>> m_weakTickets;
+    std::unique_ptr<ThreadSafeWeakHashSet<DeferredWorkTimer::TicketData>> m_weakTickets;
 
     inline std::unique_ptr<ObjectAdaptiveStructureWatchpoint>& typedArrayConstructorSpeciesAbsenceWatchpoint(TypedArrayType);
     inline std::unique_ptr<ObjectAdaptiveStructureWatchpoint>& typedArrayPrototypeSymbolIteratorAbsenceWatchpoint(TypedArrayType);
